Replaced sveltekit by astro

--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-	"name": "meapollo-automation",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.27.4",
-		"svelte": "^4.2.7",
-		"vite": "^4.4.2"
-	},
-	"type": "module"
+  "name": "meappollo-automation",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "astro": "^4.0.3"
+  }
 }
