--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.0.3"
+    "astro": "^4.0.3",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
+    "litegraph.js": "^0.7.14"
   }
 }
