--- a/api-supervisor/Cargo.toml
+++ b/api-supervisor/Cargo.toml
@@ -6,4 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "=0.5.0-rc.4"
+rocket =  { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+dotenv = "0.15.0"
+mongodb = "2.1.0"
+futures = "0.3"
+chrono = "0.4"
