--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
   # Node.js web application
@@ -9,7 +9,7 @@ services:
       - ./app:/app
     ports:
       - "8080:8080"
-    command: npm start
+    command: sh -c "npm install && npm run dev "
 
   # Rust API : Superviser
   api-supervisor:
@@ -20,6 +20,8 @@ services:
     ports:
       - "3001:3001"
     command: cargo run
+    depends_on:
+      - db
 
   # Rust API : Worker
   api-worker:
@@ -30,16 +32,12 @@ services:
     ports:
       - "3002:3002"
     command: cargo run
+    depends_on:
+      - db
 
   # MongoDB database
-  database:
-    image: mongo:alpine
-    volumes:
-      - ./database:/data/db
+  db:
+    image: mongo
+    restart: always
     ports:
       - "27017:27017"
-
-networks:
-  default:
-    external:
-      name: my_network
