--- a/api-supervisor/package.json
+++ b/api-supervisor/package.json
@@ -2,9 +2,11 @@
   "name": "api-supervisor",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "dev": "nodemon ./server.js --legacy-watch"
   },
   "author": "",
   "license": "ISC",
