--- a/api-supervisor/package.json
+++ b/api-supervisor/package.json
@@ -15,13 +15,13 @@
     "@fastify/autoload": "^5.7.1",
     "@fastify/cors": "^8.2.0",
     "@fastify/multipart": "^7.4.1",
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "5.7.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
     "ms": "^2.1.3",
     "papaparse": "^5.4.0",
-    "prisma": "^4.11.0"
+    "prisma": "^5.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
