Test interface and base worker and supervisor

--- a/Automation/Automation.Base/Automation.Base.csproj
+++ b/Automation/Automation.Base/Automation.Base.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Automation.Plugins.Base\Automation.Plugins.Base.csproj" />
+  </ItemGroup>
+
 </Project>
