--- a/Automation/Automation.Plugins/Automation.Plugins.csproj
+++ b/Automation/Automation.Plugins/Automation.Plugins.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Automation.Plugins.Base\Automation.Plugins.Base.csproj" />
+    <ProjectReference Include="..\Automation.Base\Automation.Base.csproj" />
   </ItemGroup>
 
 </Project>
