Move base tasks to Plugins.Base

--- a/Automation/Automation.Base/Automation.Base.csproj
+++ b/Automation/Automation.Base/Automation.Base.csproj
@@ -1,9 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UseWPF>True</UseWPF>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Automation.Plugins.Base\Automation.Plugins.Base.csproj" />
+  </ItemGroup>
 
 </Project>
