Separating scope from app

--- a/Automation/Automation.Supervisor/Automation.Supervisor.csproj
+++ b/Automation/Automation.Supervisor/Automation.Supervisor.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Automation.Base\Automation.Base.csproj" />
     <ProjectReference Include="..\Automation.Plugins.Base\Automation.Plugins.Base.csproj" />
   </ItemGroup>
 
