--- a/Automation/Automation.Api.Client/Automation.Api.Client.csproj
+++ b/Automation/Automation.Api.Client/Automation.Api.Client.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Automation.Plugins.Base\Automation.Plugins.Base.csproj" />
+    <ProjectReference Include="..\Automation.Plugins.Shared\Automation.Plugins.Shared.csproj" />
   </ItemGroup>
 
 </Project>
