Create project for API client of supervisor

--- a/Automation/Automation.Supervisor.Client/Automation.Supervisor.Client.csproj
+++ b/Automation/Automation.Supervisor.Client/Automation.Supervisor.Client.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resources\test.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\test.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
