--- a/Automation/Automation.App/Automation.App.csproj
+++ b/Automation/Automation.App/Automation.App.csproj
@@ -28,7 +28,7 @@
     <ProjectReference Include="..\..\..\wpf-components\Joufflu.Shared\Joufflu.Shared.csproj" />
     <ProjectReference Include="..\Automation.DAL\Automation.DAL.csproj" />
     <ProjectReference Include="..\Automation.Plugins\Automation.Plugins.csproj" />
-    <ProjectReference Include="..\Automation.Supervisor\Automation.Supervisor.csproj" />
+    <ProjectReference Include="..\Automation.Supervisor.Client\Automation.Supervisor.Client.csproj" />
     <ProjectReference Include="..\Automation.Worker\Automation.Worker.csproj" />
   </ItemGroup>
 
