--- a/Automation/Automation.Api.Worker/Automation.Api.Worker.csproj
+++ b/Automation/Automation.Api.Worker/Automation.Api.Worker.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>60b69de6-8b3f-4d16-b4d5-625315f2b418</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
