--- a/Automation/docker-compose.yml
+++ b/Automation/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3.4'
-
 services:
   automation.api.supervisor:
     image: ${DOCKER_REGISTRY-}automationapisupervisor
@@ -16,6 +15,7 @@ services:
     build:
       context: .
       dockerfile: Automation.Api.Worker/Dockerfile
+
   mongo:
     restart: always
     image: mongo:latest
@@ -25,13 +25,12 @@ services:
       - "27017:27017"
     volumes:
       - mongodb-data:/data/db
-      - ./init-mongo.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     environment:
-      MONGO_INITDB_DATABASE: UserDB
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: Test123!
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
 
 volumes:
   mongodb-data:
-    driver: local  
-
+    driver: local
