--- a/Automation/Automation.Api.Supervisor/Dockerfile
+++ b/Automation/Automation.Api.Supervisor/Dockerfile
@@ -22,4 +22,5 @@ RUN dotnet publish "./Automation.Api.Supervisor.csproj" -c $BUILD_CONFIGURATION 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY .env .
 ENTRYPOINT ["dotnet", "Automation.Api.Supervisor.dll"]
