--- a/Automation/docker-compose.yml
+++ b/Automation/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     build:
       context: .
       dockerfile: Automation.Api.Supervisor/Dockerfile
+    env_file:
+      - .env
 
   automation.api.worker:
     image: ${DOCKER_REGISTRY-}automationapiworker
@@ -15,6 +17,8 @@ services:
     build:
       context: .
       dockerfile: Automation.Api.Worker/Dockerfile
+    env_file:
+      - .env
 
   mongo:
     restart: always
