--- a/Automation/Automation.Api.Supervisor/Automation.Api.Supervisor.csproj
+++ b/Automation/Automation.Api.Supervisor/Automation.Api.Supervisor.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="DotNetEnv" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="NSwag.AspNetCore" Version="14.1.0" />
   </ItemGroup>
 
   <ItemGroup>
