--- a/Automation/Automation.App.Shared/Automation.App.Shared.csproj
+++ b/Automation/Automation.App.Shared/Automation.App.Shared.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
+    <PackageReference Include="RestSharp" Version="111.4.1" />
   </ItemGroup>
 
   <ItemGroup>
