--- a/Automation/docker-compose.yml
+++ b/Automation/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       dockerfile: Automation.Api.Supervisor/Dockerfile
     env_file:
       - .env
+    ports:
+      - "8080:8080"
+      - "8081:8081"
 
   automation.api.worker:
     image: ${DOCKER_REGISTRY-}automationapiworker
