--- a/Automation/docker-compose.yml
+++ b/Automation/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     ports:
       - "8080:8080"
       - "8081:8081"
+    volumes:
+      - ./nugetlocal:/app/data/nuget
 
   automation.api.worker:
     image: ${DOCKER_REGISTRY-}automationapiworker
