--- a/Automation/Automation.App.Shared/Automation.App.Shared.csproj
+++ b/Automation/Automation.App.Shared/Automation.App.Shared.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\wpf-components\Usuel.Shared\Usuel.Shared.csproj" />
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
 
