--- a/Automation/Automation.Api.Supervisor/Automation.Api.Supervisor.csproj
+++ b/Automation/Automation.Api.Supervisor/Automation.Api.Supervisor.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Automation.Api.Shared\Automation.Api.Shared.csproj" />
     <ProjectReference Include="..\Automation.Dal\Automation.Dal.csproj" />
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
