--- a/Automation/Automation.Plugins/Automation.Plugins.csproj
+++ b/Automation/Automation.Plugins/Automation.Plugins.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Title>Base automation plugins</Title>
   </PropertyGroup>
 
   <ItemGroup>
