Base for worker api

--- a/Automation/Automation.Api.Worker/Automation.Api.Worker.csproj
+++ b/Automation/Automation.Api.Worker/Automation.Api.Worker.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="NSwag.AspNetCore" Version="14.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Automation.Api.Shared\Automation.Api.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
