--- a/Automation/Automation.Worker/Automation.Worker.csproj
+++ b/Automation/Automation.Worker/Automation.Worker.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Automation.Plugins.Shared\Automation.Plugins.Shared.csproj" />
+    <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
 
 </Project>
