--- a/Automation/docker-compose.yml
+++ b/Automation/docker-compose.yml
@@ -14,17 +14,19 @@ services:
       - "8081:8081"
     volumes:
       - ./volumes/nugetlocal:/app/data/nuget
-      - ./volumes/cache:/app/data/cache
 
   automation.api.worker:
     image: ${DOCKER_REGISTRY-}automationapiworker
     depends_on:
       - mongo
+      - automation.api.supervisor
     build:
       context: .
       dockerfile: Automation.Api.Worker/Dockerfile
     env_file:
       - .env
+    volumes:
+      - ./volumes/nugetlocal:/app/data/nuget
 
   mongo:
     restart: always
