Add redis base to docker compose

--- a/Automation/docker-compose.yml
+++ b/Automation/docker-compose.yml
@@ -43,6 +43,14 @@ services:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
 
+# Notify task instance change
+#   redis:
+#    image: redis:latest
+#    ports:
+#      - "6379:6379"
+#    volumes:
+#      - redis_data:/data
+#    command: redis-server --appendonly yes
 volumes:
   mongodb-data:
     driver: local
