Add redis database for communication with workers

--- a/Automation/.env.example
+++ b/Automation/.env.example
@@ -1,3 +1,6 @@
 MONGO_INITDB_DATABASE=Automation
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=Test123!
+MONGODB_URI=mongodb://admin:Test123!@mongo:27017/Automation
+
+REDIS_URI=redis
