--- a/Automation/Automation.Api.Worker/Automation.Api.Worker.csproj
+++ b/Automation/Automation.Api.Worker/Automation.Api.Worker.csproj
@@ -19,6 +19,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Automation.Api.Shared\Automation.Api.Shared.csproj" />
     <ProjectReference Include="..\Automation.Dal\Automation.Dal.csproj" />
+    <ProjectReference Include="..\Automation.Realtime\Automation.Realtime.csproj" />
+    <ProjectReference Include="..\Automation.Worker\Automation.Worker.csproj" />
   </ItemGroup>
 
 </Project>
