--- a/Automation/docker-compose.yml
+++ b/Automation/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: ${DOCKER_REGISTRY-}automationapisupervisor
     depends_on:
       - mongo
+      - redis
     build:
       context: .
       dockerfile: Automation.Api.Supervisor/Dockerfile
@@ -14,19 +15,25 @@ services:
       - "8081:8081"
     volumes:
       - ./volumes/nugetlocal:/app/data/nuget
+    networks:
+      - internal
 
   automation.api.worker:
     image: ${DOCKER_REGISTRY-}automationapiworker
     depends_on:
       - mongo
-      - automation.api.supervisor
+      - redis
     build:
       context: .
       dockerfile: Automation.Api.Worker/Dockerfile
     env_file:
       - .env
+    environment:
+      - SERVICE_NAME={{.Service.Name}}
     volumes:
       - ./volumes/nugetlocal:/app/data/nuget
+    networks:
+      - internal
 
   mongo:
     restart: always
@@ -43,14 +50,19 @@ services:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
 
-# Notify task instance change
-#   redis:
-#    image: redis:latest
-#    ports:
-#      - "6379:6379"
-#    volumes:
-#      - redis_data:/data
-#    command: redis-server --appendonly yes
+# For worker communication with clients and supervisor
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes
+    networks:
+      - internal
+
 volumes:
   mongodb-data:
     driver: local
+
+networks:
+    internal:
+        driver: bridge
