--- a/Automation/Automation.Api.Supervisor/Automation.Api.Supervisor.csproj
+++ b/Automation/Automation.Api.Supervisor/Automation.Api.Supervisor.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Automation.Api.Shared\Automation.Api.Shared.csproj" />
     <ProjectReference Include="..\Automation.Dal\Automation.Dal.csproj" />
+    <ProjectReference Include="..\Automation.Realtime\Automation.Realtime.csproj" />
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
 
