Proper worker service and supervisor  worker communication

--- a/Automation/Automation.Api.Supervisor/Automation.Api.Supervisor.csproj
+++ b/Automation/Automation.Api.Supervisor/Automation.Api.Supervisor.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\Automation.Dal\Automation.Dal.csproj" />
     <ProjectReference Include="..\Automation.Realtime\Automation.Realtime.csproj" />
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
+    <ProjectReference Include="..\Automation.Supervisor\Automation.Supervisor.csproj" />
   </ItemGroup>
 
 </Project>
