--- a/Automation/Automation.Supervisor/Automation.Supervisor.csproj
+++ b/Automation/Automation.Supervisor/Automation.Supervisor.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Automation.Dal\Automation.Dal.csproj" />
+    <ProjectReference Include="..\Automation.Realtime\Automation.Realtime.csproj" />
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
     <ProjectReference Include="..\Automation.Plugins.Shared\Automation.Plugins.Shared.csproj" />
   </ItemGroup>
