--- a/Automation/Automation.Realtime/Automation.Realtime.csproj
+++ b/Automation/Automation.Realtime/Automation.Realtime.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
