--- a/Automation/Automation.Shared/Automation.Shared.csproj
+++ b/Automation/Automation.Shared/Automation.Shared.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="RestSharp" Version="112.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Automation.Plugins.Shared\Automation.Plugins.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
