--- a/Automation/Automation.Worker.Service/Automation.Worker.Service.csproj
+++ b/Automation/Automation.Worker.Service/Automation.Worker.Service.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
   </ItemGroup>
 
