--- a/Automation/docker-compose.override.yml
+++ b/Automation/docker-compose.override.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 
 services:
-  automation.api.supervisor:
+  Automation.Supervisor.Api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
