--- a/Automation/Automation.Supervisor.Api/Automation.Supervisor.Api.csproj
+++ b/Automation/Automation.Supervisor.Api/Automation.Supervisor.Api.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Cronos" Version="0.8.4" />
     <PackageReference Include="DotNetEnv" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
