--- a/Automation/docker-compose.yml
+++ b/Automation/docker-compose.yml
@@ -48,9 +48,12 @@ services:
 
 # For worker communication with clients and supervisor
   redis:
+    restart: always
     image: redis:latest
     ports:
       - "6379:6379"
+    expose:
+      - "6379"
     volumes:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
     command: ["redis-server", "/usr/local/etc/redis/redis.conf", "--appendonly", "yes"]
