Simplified modal validate commands

--- a/Automation/Automation.App/App.config
+++ b/Automation/Automation.App/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="RedisUrl" value="https://localhost:6379/"/>
+    <add key="RedisConnectionString" value="localhost:6379"/>
     <add key="ApiUrl" value="https://localhost:8081/"/>
   </appSettings>
 </configuration>
