--- a/Automation/Automation.Shared/Automation.Shared.csproj
+++ b/Automation/Automation.Shared/Automation.Shared.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NuGet.Packaging" Version="6.14.0" />
+    <PackageReference Include="NuGet.Protocol" Version="6.14.0" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
   </ItemGroup>
 
