--- a/Automation/Automation.Shared/Automation.Shared.csproj
+++ b/Automation/Automation.Shared/Automation.Shared.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
   </ItemGroup>
 
