Separate logic in supervisor

--- a/Automation/Automation.Worker.Service/Automation.Worker.Service.csproj
+++ b/Automation/Automation.Worker.Service/Automation.Worker.Service.csproj
@@ -18,5 +18,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Automation.Dal\Automation.Dal.csproj" />
     <ProjectReference Include="..\Automation.Realtime\Automation.Realtime.csproj" />
+    <ProjectReference Include="..\Automation.Worker\Automation.Worker.csproj" />
   </ItemGroup>
 </Project>
