--- a/Automation/Automation.Worker/Automation.Worker.csproj
+++ b/Automation/Automation.Worker/Automation.Worker.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Automation.Dal\Automation.Dal.csproj" />
+    <ProjectReference Include="..\Automation.Plugins.Shared\Automation.Plugins.Shared.csproj" />
+    <ProjectReference Include="..\Automation.Realtime\Automation.Realtime.csproj" />
+    <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
