--- a/Automation/Automation.Supervisor.Api/Automation.Supervisor.Api.csproj
+++ b/Automation/Automation.Supervisor.Api/Automation.Supervisor.Api.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Cronos" Version="0.9.0" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
     <PackageReference Include="NSwag.AspNetCore" Version="14.2.0" />
