--- a/Automation/Automation.App.Shared/Automation.App.Shared.csproj
+++ b/Automation/Automation.App.Shared/Automation.App.Shared.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" PrivateAssets="All"/>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.6" />
+    <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" PrivateAssets="All" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
   </ItemGroup>
 
