Removed interfaces and use a shared project for models

--- a/Automation/Automation.App.Shared/Automation.App.Shared.csproj
+++ b/Automation/Automation.App.Shared/Automation.App.Shared.csproj
@@ -18,4 +18,6 @@
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
 
+  <Import Project="..\..\Automation.Dal.Models\Automation.Dal.Models.projitems" Label="Shared" />
+
 </Project>
