Move shared project and fix syntaxt errors

--- a/Automation/Automation.App.Shared/Automation.App.Shared.csproj
+++ b/Automation/Automation.App.Shared/Automation.App.Shared.csproj
@@ -18,6 +18,5 @@
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
 
-  <Import Project="..\..\Automation.Dal.Models\Automation.Dal.Models.projitems" Label="Shared" />
-
+  <Import Project="..\Automation.Dal.Models\Automation.Dal.Models.projitems" Label="Shared" />
 </Project>
