--- a/Automation/Automation.Dal/Automation.Dal.csproj
+++ b/Automation/Automation.Dal/Automation.Dal.csproj
@@ -21,6 +21,6 @@
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
 
-  <Import Project="..\..\Automation.Dal.Models\Automation.Dal.Models.projitems" Label="Shared" />
+  <Import Project="..\Automation.Dal.Models\Automation.Dal.Models.projitems" Label="Shared" />
 
 </Project>
