Fix backend errors

--- a/Automation/Automation.Plugins/Automation.Plugins.csproj
+++ b/Automation/Automation.Plugins/Automation.Plugins.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Automation.Plugins.Shared\Automation.Plugins.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Flow\" />
+  </ItemGroup>
+
 </Project>
