Rename file from shared project

--- a/Automation/Automation.Dal/Automation.Dal.csproj
+++ b/Automation/Automation.Dal/Automation.Dal.csproj
@@ -15,6 +15,8 @@
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
 
-  <Import Project="..\Automation.Dal.Models\Automation.Dal.Models.projitems" Label="Shared" />
+  <Import Project="..\Automation.Models\Automation.Models.projitems" Label="Shared" />
+
+  <Import Project="..\Automation.Models\Automation.Models.projitems" Label="Shared" />
 
 </Project>
