--- a/Automation/Automation.App.Shared/Automation.App.Shared.csproj
+++ b/Automation/Automation.App.Shared/Automation.App.Shared.csproj
@@ -18,5 +18,7 @@
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
 
-  <Import Project="..\Automation.Dal.Models\Automation.Dal.Models.projitems" Label="Shared" />
+  <Import Project="..\Automation.Models\Automation.Models.projitems" Label="Shared" />
+
+  <Import Project="..\Automation.Models\Automation.Models.projitems" Label="Shared" />
 </Project>
