Add property kind to schema and adpated icons

--- a/Automation/Automation.App/Automation.App.csproj
+++ b/Automation/Automation.App/Automation.App.csproj
@@ -57,6 +57,9 @@
     <Compile Update="Components\Inputs\TextBoxModal.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Components\Schema\IconPropertyKind.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
