Add SchemaFactory tests

--- a/Automation/Automation.Worker.Tests/Automation.Worker.Tests.csproj
+++ b/Automation/Automation.Worker.Tests/Automation.Worker.Tests.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Automation.Worker\Automation.Worker.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
