--- a/Automation/Automation.Shared/Automation.Shared.csproj
+++ b/Automation/Automation.Shared/Automation.Shared.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NuGet.Packaging" Version="6.14.0" />
     <PackageReference Include="NuGet.Protocol" Version="6.14.0" />
-    <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
+    <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" PrivateAssets="All" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
   </ItemGroup>
 
