--- a/Automation/Automation.Dal/Automation.Dal.csproj
+++ b/Automation/Automation.Dal/Automation.Dal.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="3.4.2" />
+    <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+    <PackageReference Include="NJsonSchema" Version="11.5.1" />
   </ItemGroup>
 
   <ItemGroup>
