Display task schema and fix create graph from task

--- a/Automation/Automation.Plugins/Automation.Plugins.csproj
+++ b/Automation/Automation.Plugins/Automation.Plugins.csproj
@@ -5,15 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Title>Base automation plugins</Title>
-    <PackageIcon>fa</PackageIcon>
+    <PackageIcon></PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Automation.Plugins.Shared\Automation.Plugins.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Flow\" />
   </ItemGroup>
 
 </Project>
