Simplified command handling

--- a/Automation/Automation.App.Shared/Automation.App.Shared.csproj
+++ b/Automation/Automation.App.Shared/Automation.App.Shared.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\wpf-components\Usuel.History\Usuel.History.csproj" />
     <ProjectReference Include="..\..\..\wpf-components\Usuel.Shared\Usuel.Shared.csproj" />
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
