--- a/Automation/Automation.App/Automation.App.csproj
+++ b/Automation/Automation.App/Automation.App.csproj
@@ -13,6 +13,11 @@
     <EmbeddedResource Remove="Views\SupervisorPages\**" />
     <None Remove="Views\SupervisorPages\**" />
     <Page Remove="Views\SupervisorPages\**" />
+    <Page Update="Views\WorkPages\Workflows\Editor\Components\WorkflowOutputModal.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <XamlRuntime>Wpf</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
 
   <ItemGroup>
