Created local workflow launch

--- a/Automation/Automation.Worker/Automation.Worker.csproj
+++ b/Automation/Automation.Worker/Automation.Worker.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Automation.Dal\Automation.Dal.csproj" />
     <ProjectReference Include="..\Automation.Plugins.Shared\Automation.Plugins.Shared.csproj" />
+    <ProjectReference Include="..\Automation.Plugins\Automation.Plugins.csproj" />
     <ProjectReference Include="..\Automation.Realtime\Automation.Realtime.csproj" />
     <ProjectReference Include="..\Automation.Shared\Automation.Shared.csproj" />
   </ItemGroup>
